--- a/theme.toml
+++ b/theme.toml
@@ -1,10 +1,10 @@
 name = 'Janssen'
 license = 'MIT'
-licenselink = 'https://github.com/owner/repo/LICENSE'
+licenselink = 'https://github.com/jwtay1/hugo-theme-janssen/LICENSE'
 description = 'A Hugo documentation theme'
 
 # The home page of the theme, where the source can be found
-homepage = 'https://github.com/owner/repo'
+homepage = 'https://github.com/jwtay1/hugo-theme-janssen'
 
 # If you have a running demo of the theme
 demosite = 'https://owner.github.io/repo'
