--- a/exampleSite/hugo.toml
+++ b/exampleSite/hugo.toml
@@ -62,6 +62,9 @@ themesDir = '../..'
     name = 'GitHub'
     url = 'https://github.com/jwtay1/hugo-theme-janssen'    
 
+[outputs]
+  home = ["HTML", "JSON"]
+
 [module]
   [module.hugoVersion]
     extended = true
